# motioncam-decoder

./: .gitignore  CMakeLists.txt  README.md  example.cpp  mcraw-mounter-fuse.cpp
lib/: RawData.cpp
